# uap-haskell

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTORS.md  README.md  changelog.md  stack.yaml  ua-parser.cabal
bench/: Main.hs
src/Web/: UAParser.hs
src/Web/UAParser/: SuiteUtils.hs
test/: Main.hs
test/src/: TestSuite.hs
